--- a/_includes/figure.html
+++ b/_includes/figure.html
@@ -52,7 +52,7 @@
       src="{{ include.image | relative_url }}"
       alt="{{ include.caption | default: '' }}"
       title="{{ include.caption | default: '' }}"
-      style="{{ img }}"
+      style="max-height: 400px;"
       loading="lazy"
     />
   </a>
