build new and event section

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -32,7 +32,7 @@
     {%- assign pages = site.pages | where_exp: "page", "page.nav" | sort: "nav.order" -%}
     {%- for page in pages -%}
       {%- if page.nav -%}
-        {%- include link.html type="link" text=page.title tooltip=page.nav.tooltip link=page.dir -%}
+        {%- include link.html type="link" text=page.title tooltip=page.nav.tooltip link=page.dir subsections=page.nav.subsections -%}
       {%- endif -%}
     {%- endfor -%}
   </nav>
