--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ layout: default
 -%}
 
 {% include section.html %}
-
+{%- include figure.html image=page.image -%}
 {{ content }}
 
 {% include section.html %}
