--- a/_includes/photo.html
+++ b/_includes/photo.html
@@ -52,7 +52,7 @@
       src="{{ include.image | relative_url }}"
       alt="{{ include.caption | default: '' }}"
       title="{{ include.caption | default: '' }}"
-      style="height: 350px;width: 350px;border-radius: 10px"
+      style="border-radius: 10px; height: 18vw"
       loading="lazy"
     />
   </a>
